--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-resizable": "^3.0.5",
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
+    "use-debounce": "^10.0.5",
     "zod": "^4.0.14"
   },
   "devDependencies": {
