--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-day-picker": "^9.8.1",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
+    "react-leaflet": "^5.0.0-rc.2",
     "react-resizable": "^3.0.5",
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
@@ -53,6 +54,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/leaflet": "^1.9.20",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
