--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-hook-form": "^7.62.0",
     "react-leaflet": "^5.0.0-rc.2",
     "react-resizable": "^3.0.5",
+    "react-resizable-panels": "^3.0.4",
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
     "use-debounce": "^10.0.5",
