--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@dnd-kit/modifiers": "^9.0.0",
     "@google-analytics/data": "^5.2.0",
     "@hookform/resolvers": "^5.2.1",
+    "@next/third-parties": "^15.5.2",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-aspect-ratio": "^1.1.7",
@@ -46,10 +47,12 @@
     "react": "19.1.0",
     "react-day-picker": "^9.8.1",
     "react-dom": "19.1.0",
+    "react-ga4": "^2.1.0",
     "react-hook-form": "^7.62.0",
     "react-leaflet": "^5.0.0-rc.2",
     "react-resizable": "^3.0.5",
     "react-resizable-panels": "^3.0.4",
+    "recharts": "^3.1.2",
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
     "use-debounce": "^10.0.5",
