--- a/package.json
+++ b/package.json
@@ -53,9 +53,11 @@
     "react-ga4": "^2.1.0",
     "react-hook-form": "^7.62.0",
     "react-leaflet": "^5.0.0-rc.2",
+    "react-markdown": "^10.1.0",
     "react-resizable": "^3.0.5",
     "react-resizable-panels": "^3.0.4",
     "recharts": "^2.15.4",
+    "rehype-raw": "^7.0.0",
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
     "use-debounce": "^10.0.5",
