--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 NEXT_PUBLIC_API_BASE_URL=http://localhost:8088/api
 NEXT_PUBLIC_GA_ID="G-Q42S866EV7"
+NEXT_PUBLIC_KEYCLOAK_URL=http://auth.ticketly.com:8080
+NEXT_PUBLIC_KEYCLOAK_REALM=event-ticketing
+NEXT_PUBLIC_KEYCLOAK_CLIENT_ID=web-frontend
