--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "date-fns": "^4.1.0",
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
+    "framer-motion": "^12.23.13",
     "keycloak-js": "^26.2.0",
     "lucide-react": "^0.525.0",
     "next": "15.4.3",
