Enhance discount code handling: add clean-build script to package.json and improve discount button UI in SelectionSummary with available discounts indication.

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev -p 8090",
     "build": "next build",
+    "clean-build": "rm -rf .next && next build",
     "start": "next start -p 8090",
     "lint": "next lint"
   },
