--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "build": "next build",
     "clean-build": "rm -rf .next && next build",
     "start": "next start -p 8090",
-    "lint": "next lint"
+    "lint": "next lint",
+    "cypress": "cypress open",
+    "cypress:run": "cypress run",
+    "cypress:e2e": "cypress run --e2e"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
@@ -79,6 +82,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/react-resizable": "^3.0.8",
+    "cypress": "^15.4.0",
     "eslint": "^9",
     "eslint-config-next": "15.4.3",
     "tailwindcss": "^4",
