--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -4,9 +4,10 @@
     "lib": ["es5", "dom"],
     "types": ["cypress", "node"],
     "baseUrl": ".",
+    "jsx": "react-jsx",
     "paths": {
       "@/*": ["../src/*"]
     }
   },
-  "include": ["**/*.ts"]
+  "include": ["**/*.ts", "**/*.tsx"]
 }
