--- a/package.json
+++ b/package.json
@@ -74,19 +74,41 @@
     "zod": "^4.0.14"
   },
   "devDependencies": {
+    "@babel/core": "^7.28.4",
+    "@babel/preset-env": "^7.28.3",
+    "@babel/preset-react": "^7.27.1",
+    "@babel/preset-typescript": "^7.27.1",
+    "@cypress/react": "^9.0.1",
+    "@cypress/webpack-dev-server": "^5.1.3",
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/leaflet": "^1.9.20",
     "@types/node": "^20",
     "@types/qrcode": "^1.5.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/react-resizable": "^3.0.8",
+    "babel-loader": "^10.0.0",
+    "buffer": "^6.0.3",
+    "css-loader": "^7.1.2",
     "cypress": "^15.4.0",
     "eslint": "^9",
     "eslint-config-next": "15.4.3",
+    "jest": "^30.2.0",
+    "jest-environment-jsdom": "^30.2.0",
+    "path-browserify": "^1.0.1",
+    "postcss-loader": "^8.2.0",
+    "process": "^0.11.10",
+    "stream-browserify": "^3.0.0",
+    "style-loader": "^4.0.0",
     "tailwindcss": "^4",
+    "ts-loader": "^9.5.4",
     "tw-animate-css": "^1.3.5",
-    "typescript": "5.9.2"
+    "typescript": "5.9.2",
+    "util": "^0.12.5",
+    "webpack": "^5.102.1"
   }
 }
